--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,24 @@
     margin: 0;
     padding: 0;
 }
+
+.menu ul{
+    margin: 0;
+    padding: 0;
+}
+
+.menu li{
+    display: inline-block;
+    background-color: black;
+}
+
+.menu a{
+    text-decoration: none;
+    display: block;
+    color: white;
+    padding: 10px;
+}
+
+.derecha{
+    float: right;
+}
