--- a/styles.css
+++ b/styles.css
@@ -24,3 +24,44 @@
 .derecha{
     float: right;
 }
+
+.main{
+    width: 100%;
+    border: 1px solid red;
+}
+.novedades{
+    border: 1px solid blue;
+    height: 250px;
+    display: block;
+}
+.collecion{
+    border: 1px solid orange;
+    display: inline-block;
+    width: 49.5%;
+    height: 200px;
+
+}
+.accesorios{
+    border: 1px solid violet;
+    display: inline-block;
+    width: 49.5%;
+    height: 200px;
+
+}
+
+.proximamente{
+    border: 1px solid green;
+    height: 250px;
+    display: block;
+}
+
+.nosotros{
+    border: 1px solid sienna;
+}
+
+.footer{
+    border: 1px solid black;
+    width: 100%;
+    height: 100px;
+    background-color: black;
+}
