--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,18 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: 'Raleway', sans-serif;
+}
+/*
+https://colorhunt.co/palette/257799
+4a3933  simil marron
+f0a500  simil maiz
+e45826  simil naranja
+e6d5b8  simil crema calido
+*/
+
+.header{
+    background-color: #4a3933;
 }
 
 .menu ul{
@@ -11,15 +23,23 @@
 
 .menu li{
     display: inline-block;
-    background-color: black;
+    background-color: #4a3933;
 }
 
 .menu a{
     text-decoration: none;
     display: block;
-    color: white;
-    padding: 10px;
+    color: #e6d5b8;
+    padding: 12px;
+    border: 2px solid #4a3933;
 }
+
+.menu a:hover{
+    border: 2px solid #4a3933;
+    background: #e45826;
+    color: #e6d5b8;
+}
+
 
 .derecha{
     float: right;
@@ -27,41 +47,41 @@
 
 .main{
     width: 100%;
-    border: 1px solid red;
+
 }
 .novedades{
-    border: 1px solid blue;
     height: 250px;
     display: block;
+    background: #e45826;
 }
 .collecion{
-    border: 1px solid orange;
     display: inline-block;
-    width: 49.5%;
+    width: 49.7%;
     height: 200px;
+    background: #e6d5b8;
 
 }
 .accesorios{
-    border: 1px solid violet;
     display: inline-block;
-    width: 49.5%;
+    width: 49.7%;
     height: 200px;
+    background: #e6d5b8;
 
 }
 
 .proximamente{
-    border: 1px solid green;
     height: 250px;
     display: block;
+    background: #e45826;
 }
 
 .nosotros{
-    border: 1px solid sienna;
+    background: #e6d5b8;
 }
 
 .footer{
-    border: 1px solid black;
     width: 100%;
     height: 100px;
-    background-color: black;
+    background-color: #4a3933;
 }
+
